// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login page should match snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Login
    retrieveUser={[Function]}
    userStatus=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": <form>
        <div
          className="heading"
        >
          <h2>
            LOGIN
          </h2>
          <h4
            className="error"
          />
        </div>
        <input
          className="email-input"
          onChange={[Function]}
          placeholder="Email"
          type="text"
        />
        <input
          className="password-input"
          onChange={[Function]}
          placeholder="Password"
          type="text"
        />
        <input
          className="form-button"
          disabled={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="submit"
        />
      </form>,
      "className": "login",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="heading"
          >
            <h2>
              LOGIN
            </h2>
            <h4
              className="error"
            />
          </div>,
          Array [
            <input
              className="email-input"
              onChange={[Function]}
              placeholder="Email"
              type="text"
            />,
            <input
              className="password-input"
              onChange={[Function]}
              placeholder="Password"
              type="text"
            />,
          ],
          <input
            className="form-button"
            disabled={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            type="submit"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2>
                LOGIN
              </h2>,
              <h4
                className="error"
              />,
            ],
            "className": "heading",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "LOGIN",
              },
              "ref": null,
              "rendered": "LOGIN",
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": null,
                "className": "error",
              },
              "ref": null,
              "rendered": null,
              "type": "h4",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "email",
          "nodeType": "host",
          "props": Object {
            "className": "email-input",
            "onChange": [Function],
            "placeholder": "Email",
            "type": "text",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": "password",
          "nodeType": "host",
          "props": Object {
            "className": "password-input",
            "onChange": [Function],
            "placeholder": "Password",
            "type": "text",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "className": "form-button",
            "disabled": true,
            "onClick": [Function],
            "onKeyDown": [Function],
            "type": "submit",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
      ],
      "type": "form",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": <form>
          <div
            className="heading"
          >
            <h2>
              LOGIN
            </h2>
            <h4
              className="error"
            />
          </div>
          <input
            className="email-input"
            onChange={[Function]}
            placeholder="Email"
            type="text"
          />
          <input
            className="password-input"
            onChange={[Function]}
            placeholder="Password"
            type="text"
          />
          <input
            className="form-button"
            disabled={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            type="submit"
          />
        </form>,
        "className": "login",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="heading"
            >
              <h2>
                LOGIN
              </h2>
              <h4
                className="error"
              />
            </div>,
            Array [
              <input
                className="email-input"
                onChange={[Function]}
                placeholder="Email"
                type="text"
              />,
              <input
                className="password-input"
                onChange={[Function]}
                placeholder="Password"
                type="text"
              />,
            ],
            <input
              className="form-button"
              disabled={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              type="submit"
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h2>
                  LOGIN
                </h2>,
                <h4
                  className="error"
                />,
              ],
              "className": "heading",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": "LOGIN",
                },
                "ref": null,
                "rendered": "LOGIN",
                "type": "h2",
              },
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": null,
                  "className": "error",
                },
                "ref": null,
                "rendered": null,
                "type": "h4",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "email",
            "nodeType": "host",
            "props": Object {
              "className": "email-input",
              "onChange": [Function],
              "placeholder": "Email",
              "type": "text",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": "password",
            "nodeType": "host",
            "props": Object {
              "className": "password-input",
              "onChange": [Function],
              "placeholder": "Password",
              "type": "text",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "className": "form-button",
              "disabled": true,
              "onClick": [Function],
              "onKeyDown": [Function],
              "type": "submit",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
        ],
        "type": "form",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Login page should render an error if passed one 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Login
    loginError={true}
    retrieveUser={[Function]}
    userStatus=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": <form>
        <div
          className="heading"
        >
          <h2>
            LOGIN
          </h2>
          <h4
            className="error"
          >
            Email and Password do not match
          </h4>
        </div>
        <input
          className="email-input"
          onChange={[Function]}
          placeholder="Email"
          type="text"
        />
        <input
          className="password-input"
          onChange={[Function]}
          placeholder="Password"
          type="text"
        />
        <input
          className="form-button"
          disabled={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="submit"
        />
      </form>,
      "className": "login",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="heading"
          >
            <h2>
              LOGIN
            </h2>
            <h4
              className="error"
            >
              Email and Password do not match
            </h4>
          </div>,
          Array [
            <input
              className="email-input"
              onChange={[Function]}
              placeholder="Email"
              type="text"
            />,
            <input
              className="password-input"
              onChange={[Function]}
              placeholder="Password"
              type="text"
            />,
          ],
          <input
            className="form-button"
            disabled={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            type="submit"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2>
                LOGIN
              </h2>,
              <h4
                className="error"
              >
                Email and Password do not match
              </h4>,
            ],
            "className": "heading",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "LOGIN",
              },
              "ref": null,
              "rendered": "LOGIN",
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "Email and Password do not match",
                "className": "error",
              },
              "ref": null,
              "rendered": "Email and Password do not match",
              "type": "h4",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": "email",
          "nodeType": "host",
          "props": Object {
            "className": "email-input",
            "onChange": [Function],
            "placeholder": "Email",
            "type": "text",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": "password",
          "nodeType": "host",
          "props": Object {
            "className": "password-input",
            "onChange": [Function],
            "placeholder": "Password",
            "type": "text",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "className": "form-button",
            "disabled": true,
            "onClick": [Function],
            "onKeyDown": [Function],
            "type": "submit",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
      ],
      "type": "form",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": <form>
          <div
            className="heading"
          >
            <h2>
              LOGIN
            </h2>
            <h4
              className="error"
            >
              Email and Password do not match
            </h4>
          </div>
          <input
            className="email-input"
            onChange={[Function]}
            placeholder="Email"
            type="text"
          />
          <input
            className="password-input"
            onChange={[Function]}
            placeholder="Password"
            type="text"
          />
          <input
            className="form-button"
            disabled={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            type="submit"
          />
        </form>,
        "className": "login",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="heading"
            >
              <h2>
                LOGIN
              </h2>
              <h4
                className="error"
              >
                Email and Password do not match
              </h4>
            </div>,
            Array [
              <input
                className="email-input"
                onChange={[Function]}
                placeholder="Email"
                type="text"
              />,
              <input
                className="password-input"
                onChange={[Function]}
                placeholder="Password"
                type="text"
              />,
            ],
            <input
              className="form-button"
              disabled={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              type="submit"
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h2>
                  LOGIN
                </h2>,
                <h4
                  className="error"
                >
                  Email and Password do not match
                </h4>,
              ],
              "className": "heading",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": "LOGIN",
                },
                "ref": null,
                "rendered": "LOGIN",
                "type": "h2",
              },
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": "Email and Password do not match",
                  "className": "error",
                },
                "ref": null,
                "rendered": "Email and Password do not match",
                "type": "h4",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "email",
            "nodeType": "host",
            "props": Object {
              "className": "email-input",
              "onChange": [Function],
              "placeholder": "Email",
              "type": "text",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": "password",
            "nodeType": "host",
            "props": Object {
              "className": "password-input",
              "onChange": [Function],
              "placeholder": "Password",
              "type": "text",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "className": "form-button",
              "disabled": true,
              "onClick": [Function],
              "onKeyDown": [Function],
              "type": "submit",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
        ],
        "type": "form",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
